chore: refactoring user login mechanism